// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`waitForClickable should call waitUntil 1`] = `
Array [
  Array [
    [Function],
    Object {
      "interval": 5,
      "timeout": 1000,
      "timeoutMsg": "element (\\"#foo\\") still not clickable after 1000ms",
    },
  ],
]
`;

exports[`waitForClickable should do reverse 1`] = `
Array [
  Array [
    [Function],
    Object {
      "interval": 50,
      "timeout": 500,
      "timeoutMsg": "element (\\"#foo\\") still clickable after 500ms",
    },
  ],
]
`;
